--- a/src/main/webapp/WEB-INF/views/machinery/addMachine.html
+++ b/src/main/webapp/WEB-INF/views/machinery/addMachine.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Добавление</title>
 </head>
 <div th:insert="~{header :: #head}"></div>
 <body>
