--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -7,33 +7,45 @@
 <div th:insert="~{header :: #head}"></div>
 <style>
     .btn {
-            background-color: orange;
-            border-radius: 8px;
-            color: white;
-            padding: 8px 16px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 40px;
-            margin: 6px 3px;
-            cursor: pointer;
-        }
+        background-color: orange;
+        border-radius: 8px;
+        color: white;
+        padding: 8px 16px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 60px;
+        margin: 6px 3px;
+        cursor: pointer;
+    }
 </style>
-<body style="background-image: url(bd1.jpg);
+<body style="background-image: url(BD/WEB-INF/views/bd1.jpg);
     background-repeat: no-repeat;
     background-size: cover;">
 <h3>Выберите таблицу для просмотра</h3>
-<a class="btn" href="/staff/findingStaffs">Сотрудники</a>
-<a class="btn" href="/department/findDepartment">Отделы</a>
-<a class="btn" href="/maintenance/findMaintenance">Техобслуживание</a>
-<br><a class="btn" href="/material/find">Материалы</a>
-<a class="btn" href="/product/findingProducts">Продукты</a>
-<a class="btn" href="/machine/findMachine">Оборудование</a>
-<br><a class="btn" href="/machineType/find">Типы оборудования</a>
-<a class="btn" href="/machineStatus/find">Статусы оборудования</a>
-<a class="btn" href="/machineStorage/find">Склад оборудования</a>
-<a class="btn" href="/manufacture/find">Производство</a>
-<a class="btn" href="/materialStorage/find">Склад материала</a>
-<a class="btn" href="/productStorage/find">Склад продуктов</a>
+<div sec:authorize="hasRole('airat')">
+    <a class="btn" href="/staff/findingStaffs">Сотрудники</a>
+    <a class="btn" href="/department/findDepartment">Отделы</a>
+    <a class="btn" href="/maintenance/findMaintenance">Техобслуживание</a>
+    <br><a class="btn" href="/machine/findMachine">Оборудование</a>
+    <a class="btn" href="/machineType/find">Тип оборудования</a>
+    <a class="btn" href="/machineStatus/find">Статус оборудования</a>
+    <br><a class="btn" href="/factory/find">Заводы</a>
+    <a class="btn" href="/manufacture/find">Производство</a>
+</div>
+<div sec:authorize="hasRole('khamit')">
+    <a class="btn" href="/manufacture/find">Производство</a><
+    <a class="btn" href="/material/find">Материалы</a>
+    <a class="btn" href="/materialStorage/find">Склад материала</a>
+    <br><a class="btn" href="/product/findingProducts">Продукты</a>
+    <a class="btn" href="/compositionOfProduct/find">Состав продукта</a>
+    <a class="btn" href="/productStorage/find">Склад продуктов</a>
+    <a class="btn" href="/customer/find">Заказчики</a>
+    <br><a class="btn" href="/order/find">Заказ</a>
+    <a class="btn" href="/deliveryCompany/find">Заказчики материалов</a>
+    <a class="btn" href="/materialDelivery/find">Заказ материалов</a>
+    <a class="btn" href="/process/find">Процесса</a>
+    <a class="btn" href="/processStage/find">Этапы процесса</a>
+</div>
 </body>
 </html>
