--- a/src/main/webapp/WEB-INF/views/order/add.html
+++ b/src/main/webapp/WEB-INF/views/order/add.html
@@ -31,7 +31,7 @@
     <br/>
 
     <label for="productQuantity">Введите количество продукта</label>
-    <input type="number" th:field="*{productQuantity}" id="productQuantity">
+    <input  type="number" max="10000000" th:field="*{productQuantity}" id="productQuantity">
     <div style="color: red" th:if="${#fields.hasErrors('productQuantity')}" th:errors="*{productQuantity}"></div>
     <br/>
 
