--- a/src/main/webapp/WEB-INF/views/Product/addProduct.html
+++ b/src/main/webapp/WEB-INF/views/Product/addProduct.html
@@ -12,7 +12,7 @@
     <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
 
     <label for="price">Введите цену</label>
-    <br/> <input type="number" th:field="*{price}" id="price">
+    <br/> <input type="number" max="10000000" th:field="*{price}" id="price">
     <div style="color: red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
     <br/>
     <label for="color">Выберите цвет</label>
