--- a/src/main/webapp/WEB-INF/views/materialStorage/find.html
+++ b/src/main/webapp/WEB-INF/views/materialStorage/find.html
@@ -7,7 +7,7 @@
     <style>
         /* Стили таблицы (IKSWEB) */
         table.iksweb{text-decoration: none;border-collapse:collapse;width:100%;text-align:center;}
-        table.iksweb th{font-weight:normal;font-size:14px; color:#ffffff;background-color:#354251;}
+        table.iksweb th{font-weight:normal;font-size:14px; color:#ffffff;background-color:#354251;text-align:center;}
         table.iksweb td{font-size:13px;color:#354251;}
         table.iksweb td,table.iksweb th{white-space:pre-wrap;padding:10px 5px;line-height:13px;vertical-align: middle;border: 1px solid #354251;}	table.iksweb tr:hover{background-color:#f9fafb}
         table.iksweb tr:hover td{color:#354251;cursor:default;}
@@ -29,7 +29,7 @@
         <option th:each="a:${mats}" th:selected="${obj.materialId.materialId==a.getMaterialId}"  th:value="${a.getMaterialId}" th:text="${a.getName}">
     </select>
     <label for="q">Введите количество метериала</label>
-    <input type="number" th:field="*{quantity}" id="q">
+    <input  type="number" max="10000000" th:field="*{quantity}" id="q">
     <input type="submit" value="Поиск">
 
 </form>
