--- a/src/main/webapp/WEB-INF/views/processStage/add.html
+++ b/src/main/webapp/WEB-INF/views/processStage/add.html
@@ -21,7 +21,7 @@
     </select>
 
     <br/>  <label for="machineQuantity">Введите количество</label>
-    <input type="number" th:field="*{machineQuantity}" id="machineQuantity">
+    <input  type="number" max="10000000" th:field="*{machineQuantity}" id="machineQuantity">
     <div style="color: red" th:if="${#fields.hasErrors('machineQuantity')}" th:errors="*{machineQuantity}"></div>
     <input type="submit" value="Добавить">
 
