--- a/src/main/webapp/WEB-INF/views/staff/findStaff.html
+++ b/src/main/webapp/WEB-INF/views/staff/findStaff.html
@@ -7,13 +7,10 @@
     <style>
         /* Стили таблицы (IKSWEB) */
         table.iksweb{text-decoration: none;border-collapse:collapse;width:100%;text-align:center;}
-        table.iksweb th{font-weight:normal;font-size:14px; color:#ffffff;background-color:#354251;}
+        table.iksweb th{font-weight:normal;font-size:14px; color:#ffffff;background-color:#354251;text-align:center;}
         table.iksweb td{font-size:13px;color:#354251;}
         table.iksweb td,table.iksweb th{white-space:pre-wrap;padding:10px 5px;line-height:13px;vertical-align: middle;border: 1px solid #354251;}	table.iksweb tr:hover{background-color:#f9fafb}
         table.iksweb tr:hover td{color:#354251;cursor:default;}
-
-
-
     </style>
 </head>
 <div th:insert="~{header :: #head}"></div>
@@ -44,6 +41,9 @@
     <input type="submit" value="Поиск">
 
 </form>
+<td><form th:method="GET" th:action="@{/staff/procedure} ">
+    <button>Повысить всем зарплату на 10%</button>
+</form></td>
 
 <table class="iksweb">
     <thead>
