Работоспособности Хамитиной части 100%

--- a/src/main/webapp/WEB-INF/views/header.html
+++ b/src/main/webapp/WEB-INF/views/header.html
@@ -96,7 +96,7 @@
                         <li><a href="/order/find">Заказ</a></li>
                         <li><a href="/deliveryCompany/find">Заказчики материалов</a></li>
                         <li><a href="/materialDelivery/find">Заказ материалов</a></li>
-                        <li><a href="/process/find">Процесса</a></li>
+                        <li><a href="/process/find">Процессы</a></li>
                         <li><a href="/processStage/find">Этапы процесса</a></li>
                     </ul>
                 </div>
