--- a/src/main/webapp/WEB-INF/views/machineType/update.html
+++ b/src/main/webapp/WEB-INF/views/machineType/update.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Изменение материала</title>
+    <title>Изменение</title>
 </head>
 <div th:insert="~{header :: #head}"></div>
 <body>
