--- a/src/main/webapp/WEB-INF/views/maintenance/findMain.html
+++ b/src/main/webapp/WEB-INF/views/maintenance/findMain.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Поиск</title>
+  <title>Техобслуживание</title>
 
   <style>
         /* Стили таблицы (IKSWEB) */
